--- a/employee-service.properties
+++ b/employee-service.properties
@@ -1,1 +1,13 @@
 
+server.port=8081
+spring.datasource.url=jdbc:mysql://localhost:3306/employee_db
+spring.datasource.username=root
+spring.datasource.password=Prashant#9650
+# spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+# spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
+spring.jpa.show-sql=true 
+spring.jpa.hibernate.ddl-auto=update
+
+eureka.instance.prefer-ip-address=true
+spring.application.name=EMPLOYEE-SERVICE
+eureka.instance.client.serverUrl.defaultZone=http://localhost:8761/eureka/
