--- a/department-service.properties
+++ b/department-service.properties
@@ -10,3 +10,4 @@ spring.jpa.hibernate.ddl-auto=update
 spring.application.name=DEPARTMENT-SERVICE
 eureka.instance.prefer-ip-address=true
 eureka.instance.client.serverUrl.defaultZone=http://localhost:8761/eureka/
+spring.boot.message= Hello, Department service
